--- a/src/components/BlogCard/BlogImage.module.scss
+++ b/src/components/BlogCard/BlogImage.module.scss
@@ -1,49 +1,141 @@
 
-.imgLists {
-  position: absolute;
-  bottom: 0;
-  padding: 0 30px 0 0;
-  width: 100%;
-  overflow: hidden;
-  .thumb{
-    display: block;
-      width: 180px;
-      height: 120px;
-      overflow: hidden;
-      border-radius: 8px;
+.blogWrap{
+  position: relative;
+  display: flex;
+  margin: 30px auto 0;
+  padding: 30px;
+  min-height: 470px;
+  border-radius: 10px;
+  background-color: #ffffff80;
+  .mainImg {
+    position: relative;
+    width: 300px;
+    height: 405px;
+    border-radius: 10px;
+    overflow: hidden;
+    background-color: #f6f6f6;
+
     img {
       width: 100%;
       height: 100%;
       object-fit: cover;
       object-position: center;
-      cursor: pointer;
-      transition: 300ms;
-  
-      &:nth-child(2) {
-        margin: 0 10px;
-      }
-  
-      &:hover {
-        opacity: .75;
-      }
     }
   }
- 
- 
+  
+  .blogContent {
+    position: relative;
+    width: calc(100% - 300px);
+    height: auto;
+    padding-left: 35px;
+
+    .btnWrap {
+      position: absolute;
+      right: 0;
+      display: flex;
+      border-radius: 10px;
+      a{
+        display: block;
+        margin-left: 6px;
+        padding: 10px 30px;
+        text-align: center;
+        font-family: 'Noto Sans KR', sans-serif;
+        font-size: .8rem;
+        color: #fff;
+        background-color: #c7a6a6;
+        transition: .5s ease-in-out;
+      }
+    }
+
+    .textBox {
+      margin-top: 60px;
+      .title {
+        font-size: 2rem;
+        font-weight: bold;
+      }
+      p {
+        margin-top: 15px;
+        width: 80%;
+        font-size: .9rem;
+      }
+    }
+    .imgLists {
+      position: absolute;
+      bottom: 0;
+      padding: 0 30px 0 0;
+      width: 100%;
+      overflow: hidden;
+      .thumb{
+        display: block;
+          width: 180px;
+          height: 120px;
+          overflow: hidden;
+          border-radius: 8px;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          object-position: center;
+          cursor: pointer;
+          transition: 300ms;
+      
+          &:nth-child(2) {
+            margin: 0 10px;
+          }
+      
+          &:hover {
+            opacity: .75;
+          }
+        }
+      }
+     
+     
+    }
+  }
 }
 
+
+
 @media screen and (max-width: 768px) {
-  .imgLists {
-    position: absolute;
-    top: 0;
-    display: flex;
-    padding: 0;
-    width: 100%;
-    height: 120px;
-    .thumb{
-      display: block;
+  .blogWrap {
+    flex-direction: column;
+    padding: 30px;
+    min-height: auto;
+    .mainImg {
       width: 100%;
-      height: 95px;
+      height: 100%;
+    }
+    .blogContent {
+      width: 100%;
+      height: auto;
+      padding: 145px 0 0;
+      .btnWrap{
+        position: relative;
+      }
+      .textBox{
+        margin-top: 20px;
+        .title{
+          font-size: 1.5rem;
+        }
+        p{
+          width: 100%;
+          font-size: 1rem;
+        }
+      }
+      .imgLists {
+        position: absolute;
+        top: 0;
+        display: flex;
+        padding: 0;
+        width: 100%;
+        height: 120px;
+        .thumb{
+          display: block;
+          width: 100%;
+          height: 95px;
+        }
+      }
     }
   }
+ 
 }
