--- a/src/components/TabComponent/TabComponent.module.scss
+++ b/src/components/TabComponent/TabComponent.module.scss
@@ -1,6 +1,6 @@
   .tabMenu {
     display: flex;
-    border-bottom: 4px solid #bc9b8f;
+    border-bottom: 2px dotted #d2c3be4f;
     border-bottom-left-radius: 12px;
     li.tabList {
       margin-right: 5px;
@@ -8,17 +8,45 @@
         button{
           color: #fff;
           background-color: #82a75e;
+          &::before{
+            z-index: -1;
+          }
         }
       }
       button{
+        position: relative;
         padding: 18px 30px;
         color: #ababab;
         font-size: 1rem;
         letter-spacing: .5px;
         background-color: #ddd;
-        border-top-right-radius: 10px;
-        border-bottom-left-radius: 10px;
         transition: .5s ease-in-out;
+    
+        &:hover{
+          width:100%;
+          height:100%;
+          color: #fff;
+          background: #658347;
+          &:before{
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: transparent;
+          }
+        }
+        &::before{
+          content: '';
+          position: absolute;
+          bottom: 0;
+          left: 50%;
+          display: block;
+          width: 4px;
+          height: 12px;
+          border-radius: 3px;
+          background: #f3efe9;
+          transition:all .5s ease
+        }
+        
       }
     }
   }
